finally fixed scrollbar height bug

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -47,18 +47,6 @@
   }
 }
 
-.waypoint-filler {
-  position: absolute;
-  height: 80vh;
-}
-
-.navbar-filler {
-  position: absolute;
-  height: 30px;
-  width: 30px;
-  top: 0px;
-}
-
 .App-intro {
   font-size: large;
 }
