--- a/src/styles/nav_bar.scss
+++ b/src/styles/nav_bar.scss
@@ -3,6 +3,7 @@
 .navbar {
   &-link-container {
     padding: 20px 30px 20px 100px;
+
   }
   &-transparent-link {
     &-false {
@@ -32,7 +33,7 @@
   padding-right: 100px;
   padding-top: 0px;
   position: fixed;
-  width: 100vw;
+  width: 99vw;
   z-index: 1;
   overflow: hidden;
   &-hidden-true {
